# BasicVoiceAssistantWindowsRust

./: .gitignore  Cargo.toml  README.md  build.rs  commands.json
src/: execute.rs  main.rs  recording.rs  transcription.rs
