[package]
name = "A-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
device_query = "3.0.0"
